--- a/DumplingJump/DU/Resources/nibs/EquipmentViewLevelCell.xib
+++ b/DumplingJump/DU/Resources/nibs/EquipmentViewLevelCell.xib
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{2, 0}, {250, 75}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -88,7 +87,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{79, 42}, {17, 23}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="707331371"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -107,7 +105,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{130, 42}, {17, 23}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="269683442"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -120,7 +117,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{22, 14}, {45, 45}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1065978628"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -135,7 +131,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{1, -9}, {58, 67}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="411802563"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -150,7 +145,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{81, 3}, {159, 42}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="281689530"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -183,7 +177,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{171, 40}, {69, 26}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1002729004"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -198,7 +191,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{195, 45}, {42, 21}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="443097978"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -226,7 +218,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{147, 42}, {17, 23}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="763819445"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -239,7 +230,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{113, 42}, {17, 23}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="883569319"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -252,7 +242,6 @@
 										<int key="NSvFlags">293</int>
 										<string key="NSFrame">{{96, 42}, {17, 23}}</string>
 										<reference key="NSSuperview" ref="696468791"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="461955168"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -263,7 +252,6 @@
 								</array>
 								<string key="NSFrameSize">{254, 75}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="739570617"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="660290682">
@@ -276,7 +264,6 @@
 						</array>
 						<string key="NSFrameSize">{254, 74}</string>
 						<reference key="NSSuperview" ref="734300500"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="696468791"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<reference key="IBUIBackgroundColor" ref="660290682"/>
@@ -289,7 +276,6 @@
 				</array>
 				<string key="NSFrameSize">{254, 75}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="171672305"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="660290682"/>
@@ -544,104 +530,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">59</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DUTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DUTableViewCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">EquipmentViewLevelCell</string>
-					<string key="superclassName">DUTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="didPressDown:">id</string>
-						<string key="didTapButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="didPressDown:">
-							<string key="name">didPressDown:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="didTapButton:">
-							<string key="name">didTapButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="band">UIImageView</string>
-						<string key="currentButton">UIButton</string>
-						<string key="descriptionLabel">UILabel</string>
-						<string key="equipmentImageView">UIImageView</string>
-						<string key="holder">UIView</string>
-						<string key="priceLabel">UILabel</string>
-						<string key="priceLabelImage">UIImageView</string>
-						<string key="unlock0">UIImageView</string>
-						<string key="unlock1">UIImageView</string>
-						<string key="unlock2">UIImageView</string>
-						<string key="unlock3">UIImageView</string>
-						<string key="unlock4">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="band">
-							<string key="name">band</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="currentButton">
-							<string key="name">currentButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="descriptionLabel">
-							<string key="name">descriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="equipmentImageView">
-							<string key="name">equipmentImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="holder">
-							<string key="name">holder</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceLabel">
-							<string key="name">priceLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceLabelImage">
-							<string key="name">priceLabelImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock0">
-							<string key="name">unlock0</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock1">
-							<string key="name">unlock1</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock2">
-							<string key="name">unlock2</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock3">
-							<string key="name">unlock3</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock4">
-							<string key="name">unlock4</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EquipmentViewLevelCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
